<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/colorText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="239dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reward_title"
                android:layout_width="322dp"
                android:layout_height="39dp"
                android:maxLines="2"
                android:text="Hello"
                android:textAlignment="viewStart"
                android:textSize="15sp"
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end">

                <ImageView
                    android:id="@+id/ivTaskReward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGold"
                    android:paddingHorizontal="5sp"
                    android:paddingVertical="5sp"
                    app:srcCompat="@drawable/ic_coins"
                    android:contentDescription="@string/reward" />

                <TextView
                    android:id="@+id/tvRewardCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGold"
                    android:paddingHorizontal="5sp"
                    android:paddingVertical="5sp"
                    android:text="0"
                    android:textColor="@color/colorText"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/reward_use"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorGold"
            android:text="@string/use"
            android:textColor="@color/colorText"
            android:onClick="useReward" />

        <ImageButton
            android:id="@+id/reward_delete"
            android:onClick="deleteReward"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorRed"
            android:src="@android:drawable/ic_menu_delete"
            android:textColor="@color/colorText"
            android:contentDescription="@string/delete" />

    </LinearLayout>

</RelativeLayout>